add some styles for top navigation and intro block

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">	
 	<link href='https://fonts.googleapis.com/css?family=Oswald:700,400' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Raleway:300,500,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:300,500,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header>
@@ -25,23 +25,40 @@
 			</div>
 		</div>
 		<div class="header-bottom">
-			<a href="#" class="logo"></a>
-			<nav class="bottom-nav">
-				<a href="#">Home</a>
-				<a href="#">Apparel</a>
-				<a href="#">Fashion</a>
-				<a href="#">Contact us</a>
-			</nav>
-			<div class="cart"></div>
+			<div class="layout-center clearfix">
+				<div class="logo">
+					<h1 class="company-name">Bullsy</h1>
+					<span>Rugged Shoes Store</span>
+				</div>
+				<nav class="bottom-nav">
+					<a href="#">Home</a>
+					<a href="#">Apparel</a>
+					<a href="#">Fashion</a>
+					<a href="#">Contact us</a>
+				</nav>
+				<div class="cart">
+					<span class="items-count">10 items</span>
+					<span class="price">459,99</span>
+				</div>
+			</div>
 		</div>
 	</header>
 	<main>
 		<section class="intro">
-			<div class="intro-image"></div>
-			<div class="features">
-				<div class="feature-item"></div>
-				<div class="feature-item"></div>
-				<div class="feature-item"></div>
+			<div class="layout-center">
+				<div class="intro-image">
+					<ul class="shoes-type">
+						<li>Shoes</li>
+						<li>Snickers</li>
+						<li>Boots</li>
+						<li>Ruggedness</li>
+					</ul>
+				</div>
+				<div class="features">
+					<div class="feature-item"></div>
+					<div class="feature-item"></div>
+					<div class="feature-item"></div>
+				</div>
 			</div>
 		</section>
 		<section class="shoes-categories">
