add some styles for features block and shoes categories block

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<section class="intro">
 			<div class="layout-center">
 				<div class="intro-image">
+					<div class="buler-logo"></div>
 					<ul class="shoes-type">
 						<li>Shoes</li>
 						<li>Snickers</li>
@@ -55,16 +56,48 @@
 					</ul>
 				</div>
 				<div class="features">
-					<div class="feature-item"></div>
-					<div class="feature-item"></div>
-					<div class="feature-item"></div>
+					<div class="feature-item">
+						<h2 class="feature-title">Free Shipping</h2>
+						<p class="feature-text">- on all orders above <span class="red-mark">$99</span></p>
+					</div>
+					<div class="feature-item">
+						<h2 class="feature-title">New Shoes Collection</h2>
+						<p class="feature-text">- brand new collection of <span class="red-mark">Bulls Shoes</span></p>
+					</div>
+					<div class="feature-item">
+						<h2 class="feature-title">Money back guarantee</h2>
+						<p class="feature-text">- return policy on all orders within <span class="red-mark">14 days</span></p>
+					</div>
 				</div>
 			</div>
 		</section>
 		<section class="shoes-categories">
-			<article class="shoes-categories-item"></article>
-			<article class="shoes-categories-item"></article>
-			<article class="shoes-categories-item"></article>
+			<div class="layout-center">
+				<div class="section-header">
+					<h2 class="section-title">Our shoe categories</h2>
+				</div>
+				<div class="shoes-categories-list">
+					<article class="shoes-categories-item">
+						<div class="shoes-categories-image">							
+						</div>
+						<h3 class="shoes-categories-title">Snickers</h3>
+						<p class="shoes-categories-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi facilis asperiores inventore aspernatur.</p>
+						<a href="#">View the category</a>
+					</article>
+					<article class="shoes-categories-item">
+						<div class="shoes-categories-image"></div>
+						<h3 class="shoes-categories-title">Running shoes</h3>
+						<p class="shoes-categories-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi facilis asperiores inventore aspernatur.</p>
+						<a href="#">View the category</a>
+					</article>
+					<article class="shoes-categories-item">
+						<div class="shoes-categories-image"></div>
+						<h3 class="shoes-categories-title">Mountain shoes</h3>
+						<p class="shoes-categories-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi facilis asperiores inventore aspernatur.</p>
+						<a href="#">View the category</a>
+					</article>
+				</div>
+			</div>				
 		</section>
 		<section class="arrivals">
 			<article class="shoes-item"></article>
