add link to cart

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<a class="menu-item" href="#">Contact us</a>
 				</nav>
 				<div class="cart">
-					<span class="items-count">10 items</span>
+					<a class="items-count" href="#">10 items</a>
 					<span class="price">459,99 $</span>
 				</div>
 			</div>
